# pick_pro

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: robot_config.yaml
o_detector/: robot_controller.py
scripts/: ball_detector.py  live_tcp_logger.py  main_picker.py
